--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     width: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-right: 50px;
+    /* padding-right: 50px; */
     overflow:hidden; 
 
   }
